agrega loading y corrige gh-pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "aos": "^2.3.4",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -46,5 +45,8 @@
       "last 1 safari version"
     ]
   },
-    "homepage": "https://bastianbrito.github.io/react-pcclean"
+  "homepage": "https://bastianbrito.github.io/react-pcclean",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
