corrige la ruta homepage para azure

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://bastianbrito.github.io/react-pcclean",
+  "homepage": ".",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
